# dlib_68_sample

./: README.md  build.gradle
app/: build.gradle
app/libs/include/dlib/logger/: logger_kernel_1.cpp
app/src/main/cpp/: CMakeLists.txt  face_landmark_detection_ex.cpp  native-lib.cpp
app/src/main/java/com/ty/opencvtest/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
